<resources>
    <string name="app_name">Music_25</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_downloaded">Downloaded</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_playlist">Playlist</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="title_home">Home</string>
    <string name="description_song_image">Song image</string>
    <string name="description_button_previous">Previous button</string>
    <string name="description_button_play">Play button</string>
    <string name="description_button_next">Next button</string>
    <string name="temp_song_name">Love you and love me Love you and love me</string>
    <string name="text_see_all"><![CDATA[See All >>]]></string>
</resources>
