<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/image_song_image"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:contentDescription="@string/description_song_image"
        android:src="@drawable/ic_home_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/text_song_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_song_name"
        android:layout_width="@dimen/dp_0"
        android:layout_height="match_parent"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/temp_song_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_previous"
        app:layout_constraintStart_toEndOf="@id/image_song_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/button_previous"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:contentDescription="@string/description_button_previous"
        android:src="@drawable/ic_previous_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_play"
        app:layout_constraintStart_toEndOf="@id/text_song_name"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/button_play"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:contentDescription="@string/description_button_play"
        android:src="@drawable/ic_play_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_next"
        app:layout_constraintStart_toEndOf="@id/button_previous"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/button_next"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:contentDescription="@string/description_button_next"
        android:src="@drawable/ic_next_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_play"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
